# aurora-vtol

./: .gitignore  README.md  pyproject.toml
data/effectiveness/: aurora_ring32_provisional_v1.json
data/effectiveness_specs/: aurora_ring32_candidate_template_v1.json  aurora_ring32_geometry_seed_v1.json
docs/: architecture.md  bridge_workflows.md  command_reference.md  effectiveness_candidate_provenance_template.md  effectiveness_map.md  engineering_notes.md  engineering_review_checklist.md  fault_model.md  hardware_control_architecture.md  icd.md  limitations.md  module_reference.md  repo_review_current_state.md  scenario_guide.md  setup.md  topology.md  trace_schema.md
scripts/: export_all.sh  export_local.sh  export_v1_v2.sh  export_v3.sh  export_v4.sh  trace_to_mp.py  trace_to_tlog.py
src/aurora_gates/: bridge.py  cli.py  effectiveness.py  icd.py  topology.py  vehicle_controller.py
src/aurora_vtol/: bridge.py  bridge_artifacts.py  bridge_sitl.py  cli.py  icd.py  (+9 more)
tests/: test_bridge_artifacts.py  test_bridge_provenance.py  test_bridge_transport.py  test_controller_topology_regressions.py  test_coordinate_execution.py  test_coordinate_mission.py  test_coordinate_support.py  test_effectiveness_promotion.py  test_effectiveness_rollback.py  test_effectiveness_switch.py  test_effectiveness_workflows.py  test_fault_workflows.py  test_maneuver_analysis.py  test_maneuver_execution.py  test_maneuver_scenarios.py  test_maneuver_support.py  test_metrics.py  test_mission_planning.py  test_power_system.py  test_reporting.py  test_sim_runtime.py  test_study_workflows.py
(+27 files in other folders)
