[project]
name = "aurora-allocator-v4"
version = "0.1.0"
description = "Project Aurora Allocator prototypes V1–V4 with CLI demos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "typer>=0.12.0",
]

[project.scripts]
aurora = "aurora_gates.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# explicitly list package directories so hatch can build editable installs
packages = ["src/aurora_gates"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
